# webMenuGenerator

./: .gitignore  README.md  handover_notes.md  memo.txt  pyproject.toml  requirements.txt  result.html
dataSrc/free/config/: call.ini  contents.ini  hodai_choice_lunch.ini  jumpmenu.ini  kt.ini  layout.ini  menu.ini  menu_off.ini  menubook.ini  ntp.ini  payment.ini  scrsvr.ini  scrsvrad.ini
dataSrc/free/datas/: MDEditMenu.ini  tablemap.ini  tantomst.csv  version.txt
dataSrc/free/images/: Thumbs.db
dataSrc/free/source/: MDEditMenu.ini  _character.csv  _lcolor.csv  _lname.csv  _mname.csv  _orderstop.csv  _stock.csv  base.csv  csmenu.csv  iteminfo.csv  lmenu.csv  mmenu.csv  sceltext.csv  sitemcel.csv  smenu.csv  ssmenu.csv
doc/: HTML生成シーケンス.md
specification/: MenuDb.java  iteminfo.csv  menu_lite_rev111.txt  設計詳細_WebMenuGenerator.xlsx
src/webmenu/: cli.py  pipeline.py
src/webmenu/core/: ids.py  refs.py
src/webmenu/dumpers/: assets_exporter.py  raw_dump_writer.py
src/webmenu/mapping/: guidance_generator.py  rules.py  to_web_categories.py  to_web_jump_btns.py  to_web_products.py  to_web_small_pages.py  to_web_soldout.py
src/webmenu/models/: basic_info.py  item_cell.py  item_frame.py  item_info.py  lmenu.py  menu_head.py  (+3 more)
wheelhouse/: MarkupSafe-2.1.5-cp38-cp38-win32.whl  charset_normalizer-3.4.4-cp38-cp38-win32.whl  mistune-3.2.0-py3-none-any.whl  nbclient-0.10.1-py3-none-any.whl  pyzmq-27.1.0-cp38-cp38-win32.whl  rpds_py-0.20.1-cp38-none-win32.whl  setuptools-75.3.3-py3-none-any.whl  tornado-6.4.2-cp38-abi3-win32.whl  wcwidth-0.5.0-py3-none-any.whl
(+150 files in other folders)
